[package]
name = "csv_plugin"
version = "1.0.0"
edition = "2021"
description = "ARO plugin for CSV parsing and formatting"
license = "MIT"

[lib]
name = "csv_plugin"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

[profile.release]
lto = true
opt-level = "z"
